<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:background="@color/Black">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right" 
            android:clickable="false" 
            android:cursorVisible="false"
            />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/button_Sin"
            
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_black" 
       		style="@style/ButtonText"
            android:onClick="onClickListener_Sin"
            android:text="sin"
             android:padding="0dp"
            android:textColor="@color/White" 
            android:clickable="true" 
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_Cos"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_black" 
       		style="@style/ButtonText"
            android:onClick="onClickListener_Cos"
            android:text="cos"
            android:padding="0dp"
            android:textColor="@color/White" 
            android:clickable="true" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_Tan"
            android:layout_marginRight="5dp"
            android:onClick="onClickListener_Tan"
            android:text="tan"
            
            android:background="@drawable/btn_black" 
       		style="@style/ButtonText"
            android:padding="0dp"
            android:textColor="@color/White" 
            android:clickable="true" 
            android:layout_weight="1"/>

       

        <Button
            android:id="@+id/button_Del"
            android:layout_marginRight="5dp"
            android:onClick="onClickListener_Del"
            android:text="@string/delete_numbers"
            android:textColor="@color/Red"
             android:background="@drawable/btn_black" 
       		style="@style/ButtonText"
            android:padding="0dp"
             
            android:clickable="true" 
            android:layout_weight="1"/>
    </LinearLayout>

        
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/button_Bin"            
            android:layout_marginRight="5dp"            
            android:onClick="onClickListener_Bin"
            android:text="bin"
            android:background="@drawable/btn_black" 
       		style="@style/ButtonText"
            android:padding="0dp"
            android:textColor="@color/White" 
            android:clickable="true" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_Dec"
          
            android:layout_marginRight="5dp"
            
            android:onClick="onClickListener_Dec"
            android:text="dec"
            android:background="@drawable/btn_black" 
       		style="@style/ButtonText"
            android:padding="0dp"
            android:textColor="@color/White" 
            android:clickable="true" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_Hex"
            android:layout_marginRight="5dp"            
            android:onClick="onClickListener_Hex"            
            android:text="hex"
            android:background="@drawable/btn_black" 
       		style="@style/ButtonText"
            android:padding="0dp"
            android:textColor="@color/White" 
            android:clickable="true" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_Oct"
           
            android:layout_marginRight="5dp"
           
            android:onClick="onClickListener_Oct"
            android:text="oct"
            android:background="@drawable/btn_black" 
       		style="@style/ButtonText"
            android:padding="0dp"
            android:textColor="@color/White" 
            android:clickable="true" 
            android:layout_weight="1"/>
       
        
    </LinearLayout>
    
        
        
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:layout_marginBottom="5dp">

         <Button
            android:id="@+id/button_Squared_2"
            
            android:layout_marginRight="5dp"
            
            android:onClick="onClickListener_Squared_2"
            android:text="@string/squared_two"
            android:background="@drawable/btn_black" 
       		style="@style/ButtonText"
            android:padding="0dp"
            android:textColor="@color/White" 
            android:clickable="true" 
            android:layout_weight="1"/>
         
         <Button
            android:id="@+id/button_Qube"
            android:layout_marginRight="5dp"
            android:onClick="onClickListener_Qube"
            android:text="@string/qube"
            android:background="@drawable/btn_black" 
       		style="@style/ButtonText"
            android:padding="0dp"
            android:textColor="@color/White" 
            android:clickable="true" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_Root"
            
            android:layout_marginRight="5dp"
           
            android:onClick="onClickListener_Root"
            android:text="@string/square_root_symbol"
           android:background="@drawable/btn_black" 
       		style="@style/ButtonText"
            android:padding="0dp"
            android:textColor="@color/White" 
            android:clickable="true" 
            android:layout_weight="1"/>

        
        <Button
            android:id="@+id/button_Pi"
            
            android:layout_marginRight="5dp"
            
            android:onClick="onClickListener_Pi"
            android:text="@string/pi"
            android:background="@drawable/btn_black" 
       		style="@style/ButtonText"
            android:padding="0dp"
            android:textColor="@color/White" 
            android:clickable="true" 
            android:layout_weight="1"/>
        
        
    </LinearLayout>    
        
        
        
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onClickListener_7"
            android:text="7" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onClickListener_8"
            android:text="8" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:onClick="onClickListener_9"
            android:text="9" />

        <Button
            android:id="@+id/button_Divide"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:onClick="onClickListener_Divide"
            android:text="/" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onClickListener_4"
            android:text="4" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onClickListener_5"
            android:text="5" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:onClick="onClickListener_6"
            android:text="6" />

        <Button
            android:id="@+id/button_Multiply"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:onClick="onClickListener_Multiply"
            android:text="*" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onClickListener_1"
            android:text="1" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onClickListener_2"
            android:text="2" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:onClick="onClickListener_3"
            android:text="3" />

        <Button
            android:id="@+id/button_Minus"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:onClick="onClickListener_Minus"
            android:text="-" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickListener_0"
            android:text="0" />

        <Button
            android:id="@+id/button_Point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickListener_Point"
            android:text="." />

        <Button
            android:id="@+id/button_Equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickListener_Equal"
            android:text="="
            android:textSize="15sp" />
            
            <Button
                android:id="@+id/button_Plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickListener_Plus"
                android:text="+"
                android:textSize="15dp" 
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_Exit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.56"
            android:onClick="onClickListener_Exit"
            android:text="Exit"
            android:textColor="@color/Red"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_Reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.40"
            android:onClick="onClickListener_Reset"
            android:text="Reset"
            android:textColor="@color/Red" />

    </LinearLayout>

</LinearLayout>